src/main/java/com/example/medappointmentscheduler/error/PatientNotFoundException.java
package com.example.medappointmentscheduler.error;

public class PatientNotFoundException extends RuntimeException {
    public PatientNotFoundException(Long id) {
        super("Could not find patient with id: " + id);
    }
}
